updated with wingo number and colors

--- a/src/views/promotion/mybethistory.ejs
+++ b/src/views/promotion/mybethistory.ejs
@@ -4557,27 +4557,37 @@ function timerJoin1(params = '') {
                             {
                                 if($("#game_selector_btn .ar-searchbar__selector-default").text().trim() == "WinGo")
                                 {
-                                    var color = "";
                                     var join = element.bet;
+                                    let color = "";
+                                    let selected = "";
                                     if (join == "l") {
                                        color = "big";
-                                     } else if (join == "n") {
+                                       selected = "Big";
+                                    } else if (join == "n") {
                                        color = "small";
-                                     } else if (join == "t") {
+                                       selected = "Small";
+                                    } else if (join == "t") {
+                                       selected = "Violet";
                                        color = "violet";
-                                     } else if (join == "d") {
+                                    } else if (join == "d") {
                                        color = "red";
-                                     } else if (join == "x") {
+                                       selected = "Red";
+                                    } else if (join == "x") {
                                        color = "green";
-                                     } else if (join == "0") {
+                                       selected = "Green";
+                                    } else if (join == "0") {
                                        color = "red-violet";
-                                     } else if (join == "5") {
+                                       selected = "0";
+                                    } else if (join == "5") {
                                        color = "green-violet";
-                                     } else if (Number(join) % 2 == 0) {
+                                       selected = "5";
+                                    } else if (Number(join) % 2 == 0) {
                                        color = "red";
-                                     } else if (Number(join) % 2 != 0) {
+                                       selected = Number(join);
+                                    } else if (Number(join) % 2 != 0) {
                                        color = "green";
-                                     }
+                                       selected = Number(join);
+                                    }
                                     var win_loss = (element.status == "1") ? "WON" : "LOSS";
                                     var win_Min = (element.game.match(/\d+/) == null) ? "1" : element.game.match(/\d+/);
                                     var col_txt = '';
@@ -4635,7 +4645,7 @@ function timerJoin1(params = '') {
                                     <span data-v-1d8fbc24="">`+element.id_product+`</span></li><li data-v-1d8fbc24="">
                                     <span data-v-1d8fbc24=""><svg data-v-1d8fbc24="" class="svg-icon icon-round">
                                     <use xlink:href="#icon-round"></use></svg><h2 data-v-1d8fbc24="">Select</h2></span>
-                                    <p data-v-1d8fbc24="">`+color+`</p></li><li data-v-1d8fbc24=""><span data-v-1d8fbc24="">
+                                    <p data-v-1d8fbc24="">`+selected+`</p></li><li data-v-1d8fbc24=""><span data-v-1d8fbc24="">
                                     <svg data-v-1d8fbc24="" class="svg-icon icon-round"><use xlink:href="#icon-round"></use></svg>
                                     <h2 data-v-1d8fbc24="">Total bet</h2></span><span data-v-1d8fbc24="">₹`+parseFloat(total_amount).toFixed(2)+`</span></li></ul>
                                     </div></div><img data-v-1d8fbc24="" src="/assets/png/moonBar-f80ac733.png" />
@@ -5006,27 +5016,37 @@ function timerJoin1(params = '') {
                     {
                          if($("#game_selector_btn .ar-searchbar__selector-default").text().trim() == "WinGo")
                          {
-                              var color = "";
                               var join = element.bet;
+                              let color = "";
+                              let selected = "";
                               if (join == "l") {
                                  color = "big";
-                               } else if (join == "n") {
+                                 selected = "Big";
+                              } else if (join == "n") {
                                  color = "small";
-                               } else if (join == "t") {
+                                 selected = "Small";
+                              } else if (join == "t") {
+                                 selected = "Violet";
                                  color = "violet";
-                               } else if (join == "d") {
+                              } else if (join == "d") {
                                  color = "red";
-                               } else if (join == "x") {
+                                 selected = "Red";
+                              } else if (join == "x") {
                                  color = "green";
-                               } else if (join == "0") {
+                                 selected = "Green";
+                              } else if (join == "0") {
                                  color = "red-violet";
-                               } else if (join == "5") {
+                                 selected = "0";
+                              } else if (join == "5") {
                                  color = "green-violet";
-                               } else if (Number(join) % 2 == 0) {
+                                 selected = "5";
+                              } else if (Number(join) % 2 == 0) {
                                  color = "red";
-                               } else if (Number(join) % 2 != 0) {
+                                 selected = Number(join);
+                              } else if (Number(join) % 2 != 0) {
                                  color = "green";
-                               }
+                                 selected = Number(join);
+                              }
                              var win_loss = (element.status == "1") ? "WON" : "LOSS";
                              var win_Min = (element.game.match(/\d+/) == null) ? "1" : element.game.match(/\d+/);
                              var col_txt = '';
@@ -5084,7 +5104,7 @@ function timerJoin1(params = '') {
                              <span data-v-1d8fbc24="">`+element.id_product+`</span></li><li data-v-1d8fbc24="">
                              <span data-v-1d8fbc24=""><svg data-v-1d8fbc24="" class="svg-icon icon-round">
                              <use xlink:href="#icon-round"></use></svg><h2 data-v-1d8fbc24="">Select</h2></span>
-                             <p data-v-1d8fbc24="">`+color+`</p></li><li data-v-1d8fbc24=""><span data-v-1d8fbc24="">
+                             <p data-v-1d8fbc24="">`+selected+`</p></li><li data-v-1d8fbc24=""><span data-v-1d8fbc24="">
                              <svg data-v-1d8fbc24="" class="svg-icon icon-round"><use xlink:href="#icon-round"></use></svg>
                              <h2 data-v-1d8fbc24="">Total bet</h2></span><span data-v-1d8fbc24="">₹`+parseFloat(total_amount).toFixed(2)+`</span></li></ul>
                              </div></div><img data-v-1d8fbc24="" src="/assets/png/moonBar-f80ac733.png" />
@@ -5615,27 +5635,37 @@ function timerJoin1(params = '') {
                            }
                                else if($("#game_selector_btn .ar-searchbar__selector-default").text().trim() == "WinGo")
                                {
-                                 var color = "";
                                  var join = element.bet;
-                                 if (join == "l") {
-      color = "big";
-    } else if (join == "n") {
-      color = "small";
-    } else if (join == "t") {
-      color = "violet";
-    } else if (join == "d") {
-      color = "red";
-    } else if (join == "x") {
-      color = "green";
-    } else if (join == "0") {
-      color = "red-violet";
-    } else if (join == "5") {
-      color = "green-violet";
-    } else if (Number(join) % 2 == 0) {
-      color = "red";
-    } else if (Number(join) % 2 != 0) {
-      color = "green";
-    }
+                                 let color = "";
+                              let selected = "";
+                              if (join == "l") {
+                                 color = "big";
+                                 selected = "Big";
+                              } else if (join == "n") {
+                                 color = "small";
+                                 selected = "Small";
+                              } else if (join == "t") {
+                                 selected = "Violet";
+                                 color = "violet";
+                              } else if (join == "d") {
+                                 color = "red";
+                                 selected = "Red";
+                              } else if (join == "x") {
+                                 color = "green";
+                                 selected = "Green";
+                              } else if (join == "0") {
+                                 color = "red-violet";
+                                 selected = "0";
+                              } else if (join == "5") {
+                                 color = "green-violet";
+                                 selected = "5";
+                              } else if (Number(join) % 2 == 0) {
+                                 color = "red";
+                                 selected = Number(join);
+                              } else if (Number(join) % 2 != 0) {
+                                 color = "green";
+                                 selected = Number(join);
+                              }
                                    var win_loss = (element.status == "1") ? "WON" : "LOSS";
                                    var win_Min = (element.game.match(/\d+/) == null) ? "1" : element.game.match(/\d+/);
                                    var col_txt = '';
@@ -5693,7 +5723,7 @@ function timerJoin1(params = '') {
                                    <span data-v-1d8fbc24="">`+element.id_product+`</span></li><li data-v-1d8fbc24="">
                                    <span data-v-1d8fbc24=""><svg data-v-1d8fbc24="" class="svg-icon icon-round">
                                    <use xlink:href="#icon-round"></use></svg><h2 data-v-1d8fbc24="">Select</h2></span>
-                                   <p data-v-1d8fbc24="">`+color+`</p></li><li data-v-1d8fbc24=""><span data-v-1d8fbc24="">
+                                   <p data-v-1d8fbc24="">`+selected+`</p></li><li data-v-1d8fbc24=""><span data-v-1d8fbc24="">
                                    <svg data-v-1d8fbc24="" class="svg-icon icon-round"><use xlink:href="#icon-round"></use></svg>
                                    <h2 data-v-1d8fbc24="">Total bet</h2></span><span data-v-1d8fbc24="">₹`+parseFloat(total_amount).toFixed(2)+`</span></li></ul>
                                    </div></div><img data-v-1d8fbc24="" src="/assets/png/moonBar-f80ac733.png" />
