--- a/src/views/bet/trx_wingo/win.ejs
+++ b/src/views/bet/trx_wingo/win.ejs
@@ -4401,7 +4401,7 @@
 
    <%- include('element/result_popup.ejs') -%>
 
-   <div id="myModal" class="modal" style="display: none">
+   <div id="trx_myModal" class="modal" style="display: none">
 
       <!-- Modal content -->
       <div class="modal-content">
@@ -4435,7 +4435,7 @@
 
    <script>
       // Get the modal
-      var modal = document.getElementById("myModal");
+      var modal = document.getElementById("trx_myModal");
   
       // Get the element that closes the modal
       var closeBtn = document.querySelector(".close-btn");
