--- a/src/views/bet/5d/element/list_order.ejs
+++ b/src/views/bet/5d/element/list_order.ejs
@@ -325,6 +325,21 @@ position: absolute;
             </div>
             <div data-v-9d93d892="" class="Trend__C-body1-line">Statistic (last 100 Periods)</div>
             <div data-v-9d93d892="" class="Trend__C-body1-line">
+               <div data-v-9d93d892="">Total Number</div>
+               <div data-v-9d93d892="" class="Trend__C-body1-line-num" id="total_num">
+                  <span  class="number-cell">0</span>
+                  <span  class="number-cell">1</span>
+                  <span  class="number-cell">2</span>
+                  <span  class="number-cell">3</span>
+                  <span  class="number-cell">4</span>
+                  <span  class="number-cell">5</span>
+                  <span  class="number-cell">6</span>
+                  <span  class="number-cell">7</span>
+                  <span  class="number-cell">8</span>
+                  <span  class="number-cell">9</span>
+               </div>
+           </div>
+            <div data-v-9d93d892="" class="Trend__C-body1-line">
                 <div data-v-9d93d892="">Missing</div>
                 <div data-v-9d93d892="" class="Trend__C-body1-line-num" id="miss_num">
                     <div data-v-9d93d892="">1</div>
