--- a/src/views/manage/nav.ejs
+++ b/src/views/manage/nav.ejs
@@ -28,6 +28,13 @@
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <li class="nav-item">
+                    <a href="/admin/manager/main" class="nav-link">
+                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <p>Dashboard</p>
+                        <span class="right badge badge-primary"></span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/admin/manager/index" class="nav-link">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
                         <p>Wingo</p>
