updated with the admin and 5d logic

--- a/src/views/member/index.ejs
+++ b/src/views/member/index.ejs
@@ -735,7 +735,7 @@
                 <div data-v-21f3500a="" data-v-8cd483ca="" class="list">
                     <% if (level==1) { %>
                         <div data-v-21f3500a="" class="item c-row c-row-between"
-                            onclick="location.href='/admin/manager/index'">
+                            onclick="location.href='/admin/manager/main'">
                             <div data-v-21f3500a="" class="c-row c-row-middle">
                                 <i class="fa-duotone fa-user-crown fa-fade fa-lg center"
                                     style="--fa-primary-color: #2aaaf3; --fa-secondary-color: #2aaaf3;"></i>
