--- a/src/views/promotion/index.ejs
+++ b/src/views/promotion/index.ejs
@@ -137,7 +137,7 @@
                     <!---->
                     <% if (level==1) { %>
                         <div data-v-21f3500a="" class="item c-row c-row-between"
-                            onclick="location.href='/admin/manager/index'">
+                            onclick="location.href='/admin/manager/main'">
                             <div data-v-21f3500a="" class="c-row c-row-middle">
                                 <img data-v-21f3500a="" width="24px" height="24px" src="/images/s1.png" class="img">
                                 <span data-v-21f3500a="" class="name">Administrator Area</span>
