--- a/src/views/manage/nav.ejs
+++ b/src/views/manage/nav.ejs
@@ -29,7 +29,7 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <li class="nav-item">
                     <a href="/admin/manager/main" class="nav-link">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <i class="nav-icon fas fa-dashboard"></i>
                         <p>Dashboard</p>
                         <span class="right badge badge-primary"></span>
                     </a>
@@ -123,7 +123,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="/admin/manager/CreatedSalaryRecord" class="nav-link">
-                        <i class="nav-icon fa fa-cogs"></i>
+                        <i class="nav-icon fa  fa-money"></i>
                         <p>Created Salary</p>
                     </a>
                 </li>
@@ -135,7 +135,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="/admin/manager/withdrawRecord" class="nav-link">
-                        <i class="nav-icon fa fa-list"></i>
+                        <i class="nav-icon fa fa-bank"></i>
                         <p>Withdrawal (Approved)</p>
                     </a>
                 </li>
