--- a/src/views/manage/nav.ejs
+++ b/src/views/manage/nav.ejs
@@ -29,7 +29,7 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <li class="nav-item">
                     <a href="/admin/manager/main" class="nav-link">
-                        <i class="nav-icon fas fa-dashboard"></i>
+                        <i class="nav-icon fas fa-tachometer-alt"></i>
                         <p>Dashboard</p>
                         <span class="right badge badge-primary"></span>
                     </a>
