updated with trx over lapp and sorted admin colloborator issue

--- a/src/views/bet/trx_wingo/trx_block.ejs
+++ b/src/views/bet/trx_wingo/trx_block.ejs
@@ -38,6 +38,13 @@
     <link rel="stylesheet" href="/css/bet/wingo/chunk-4e7d3985.25c9d2c2.css" />
     <link rel="stylesheet" href="/css/bet/wingo/chunk-4e7d3985.25c9d2c3.css" />
     <link rel="stylesheet" href="/css/bet/wingo/chunk-4e7d3985.25c9d2c4.css" />
+    <link rel="shortcut icon" href="/images/bitbug_favicon.ico" type="image/x-icon">
+    <style>
+        .navbar-fixed[data-v-19888208]
+        {
+            background: #2c3e50 !important;
+        }
+    </style>
 </head>
 
 <body style="font-size: 12px;" class="">
