--- a/src/views/manage/dashboard.ejs
+++ b/src/views/manage/dashboard.ejs
@@ -53,7 +53,7 @@
         <section class="content">
             <div class="container-fluid">
               <div class="row info-box">
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Today User Join</p>
@@ -61,7 +61,7 @@
                           </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4">
+                <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Today's Recharge</p>
@@ -70,7 +70,7 @@
                     </div>
                   </div>
 
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Today's Withdrawal</p>
@@ -79,7 +79,7 @@
                     </div>
                   </div>
 
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">User Balance</p>
@@ -90,7 +90,7 @@
                           </div>                    
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Total Users</p>
@@ -101,7 +101,7 @@
                           </div>                    
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Pending Recharge</p>
@@ -112,7 +112,7 @@
                           </div>                    
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Success Recharge</p>
@@ -123,7 +123,7 @@
                           </div>                    
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Total Withdrawal</p>
@@ -134,7 +134,7 @@
                           </div>                    
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Withdrawal Requests</p>
@@ -145,7 +145,7 @@
                           </div>                    
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Today's total bet</p>
@@ -154,7 +154,7 @@
                           </div>                    
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Today's total win</p>
@@ -164,11 +164,85 @@
                           </div>                    
                     </div>
                   </div>
-                  <div class="col-12 col-sm-6 col-md-4">
+                  <div class="col-12 col-sm-6 col-md-3">
                     <div class="info-box mb-3">
                         <div class="title">
                             <p class="text-title" style="text-align:left">Today's profit</p>
                               <h4 class="text-amount" style="text-align:left" id="TodaysProfit">-856602</h4>
+                              
+                          </div>                    
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <div class="title">
+                            <p class="text-title" style="text-align:left">Monthly Colloborator Balance</p>
+                              <h4 class="text-amount" style="text-align:left" id="month_colloborator">-856602</h4>
+                              
+                          </div>                    
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <div class="title">
+                            <p class="text-title" style="text-align:left">Total Turnover (Month)</p>
+                              <h4 class="text-amount" style="text-align:left" id="month_turnover">-856602</h4>
+                              
+                          </div>                    
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <div class="title">
+                            <p class="text-title" style="text-align:left">Total Gift Code Redeem (Month)</p>
+                              <h4 class="text-amount" style="text-align:left" id="month_gift_redeem">-856602</h4>
+                              
+                          </div>                    
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <div class="title">
+                            <p class="text-title" style="text-align:left">Total Recharge Bonus (Month)</p>
+                              <h4 class="text-amount" style="text-align:left" id="month_recharge_bonus">-856602</h4>
+                              
+                          </div>                    
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <div class="title">
+                            <p class="text-title" style="text-align:left">Current Month Stakes</p>
+                              <h4 class="text-amount" style="text-align:left" id="month_staking_amt">-856602</h4>
+                              
+                          </div>                    
+                    </div>
+                  </div>
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <div class="title">
+                            <p class="text-title" style="text-align:left"> Current Month Stake Rewards</p>
+                              <h4 class="text-amount" style="text-align:left" id="month_staking_rewards">-856602</h4>
+                              
+                          </div>                    
+                    </div>
+                  </div>
+
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <div class="title">
+                            <p class="text-title" style="text-align:left">Active Stakes</p>
+                              <h4 class="text-amount" style="text-align:left" id="active_stakes">-856602</h4>
+                              
+                          </div>                    
+                    </div>
+                  </div>
+
+                  <div class="col-12 col-sm-6 col-md-3">
+                    <div class="info-box mb-3">
+                        <div class="title">
+                            <p class="text-title" style="text-align:left">ROI OF Stake (inc amt%)</p> Stakes</p>
+                              <h4 class="text-amount" style="text-align:left" id="roi_active_stakes">-856602</h4>
                               
                           </div>                    
                     </div>
@@ -204,6 +278,15 @@
         $("#TodaysTotalBets").text(response.data.a_TodaysTotalBets);
         $("#TodaysTotalWin").text(response.data.a_TodaysTotalWin);
         $("#TodaysProfit").text(response.data.a_TodaysProfit);
+
+        $("#month_colloborator").text(response.data.a_month_colloborator);
+        $("#month_turnover").text(response.data.a_month_turnover);
+        $("#month_gift_redeem").text(response.data.a_month_gift_redeem);
+        $("#month_recharge_bonus").text(response.data.a_month_recharge_bonus);
+        $("#month_staking_amt").text(response.data.a_month_staking_amt);
+        $("#month_staking_rewards").text(response.data.a_month_staking_rewards);
+        $("#active_stakes").text(response.data.a_active_stakes);
+        $("#roi_active_stakes").text(response.data.a_roi_active_stakes);
       }
     });
   </script>
