--- a/src/views/wallet/manual_payment.ejs
+++ b/src/views/wallet/manual_payment.ejs
@@ -206,7 +206,7 @@
                 <p>
                     <strong>UPI ID: </strong>
                     <span id="upi_id_field">
-                        digitalrupee1@ybl
+                        <%=dynamic_upi_Addr%>
                     </span>
 
                     <img class="upi_display_content__img"
